--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,23 +10,20 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        The GOV.UK Prototype Kit
+        ERC prototype using the GOV.UK Prototype Kit
         <span class="govuk-caption-xl">{{releaseVersion}}</span>
       </h1>{{releaseVersion | log }}
       <p>
-        This kit lets you rapidly create HTML prototypes of GOV.UK services.
-      </p>
-
-      <p>
-        It contains all you need to prototype anything from simple static pages to complex, data-driven transactions.
+        This kit lets you rapidly create HTML prototypes using GDS principles.
       </p>
 
       <h2 class="govuk-heading-m">About this page</h2>
-
       <p>We recommend you add links to your prototype to this page, rather than delete it.
         You'll find this page in the kit at '/app/views/index.html'.</p>
 
       <p>You can change the service name by editing the file '/app/config.js'.</p>
+
+      <p><a href="home.html">Go to homepage of ERC prototype</a></p>
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
