--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -39,42 +39,6 @@ $erc-logo-blue: #0071BA;
     font-weight: 700;
 }
 
-//---------------------------------------- BREADCRUMBS ------------------------------------------------//
-#breadcrumb-erc {
-    margin-top: 8px;
-    margin-bottom: 20px;
-    width: 940px;
-    height: auto;
-    overflow:auto;
-    text-align:left;
-    clear:both;
-    background: 0 0;
-    color: #004269;
-    li {
-        color: #004269;
-    }
-    ul {
-        list-style: none;
-        padding-left: 0;
-    }
-    #crumb-home-active {
-        width:74px;
-        overflow: hidden;
-    }
-    #crumb-home-active span{
-        float:left;
-        padding:6px 28px 6px 10px;
-        color:#fff;
-        background:url(../images/ERC/sprite.png) 0 -59px no-repeat #004269;
-        height:21px;
-        width:36px;
-        font-family: "nta", Arial, sans-serif;
-    }
-    .crumbs-erc {
-        height:100%;
-        display:inline;
-    }
-}
 //---------------------------------------- FOOTER ------------------------------------------------//
 footer {
     .ft {
@@ -134,3 +98,39 @@ body p {
     }
 }
 
+//---------------------------------------- BREADCRUMBS ------------------------------------------------//
+/* #breadcrumb-erc {
+    margin-top: 8px;
+    margin-bottom: 20px;
+    width: 940px;
+    height: auto;
+    overflow:auto;
+    text-align:left;
+    clear:both;
+    background: 0 0;
+    color: #004269;
+    li {
+        color: #004269;
+    }
+    ul {
+        list-style: none;
+        padding-left: 0;
+    }
+    #crumb-home-active {
+        width:74px;
+        overflow: hidden;
+    }
+    #crumb-home-active span{
+        float:left;
+        padding:6px 28px 6px 10px;
+        color:#fff;
+        background:url(../images/ERC/sprite.png) 0 -59px no-repeat #004269;
+        height:21px;
+        width:36px;
+        font-family: "nta", Arial, sans-serif;
+    }
+    .crumbs-erc {
+        height:100%;
+        display:inline;
+    }
+} */
