--- a/app/views/components/menu-components.html
+++ b/app/views/components/menu-components.html
@@ -2,24 +2,24 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Homepage ERC
+  Components
 {% endblock %}
 
 {% block content %}
-
+<a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl erc-text-blue">
-        Homepage
+        List of the components
       </h1>
       <p>
-        This is where I will create some prototype forms. 
+        Based on GOVUK but adapted for ERC
       </p>
 
-      <h2 class="govuk-heading-m erc-text-blue">From here you can:</h2>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="components/menu-components.html">see the various components</a></li>
-        <li><a href="forms/housing1.html">see the housing form</a></li>
+        <li><a href="buttons.html">buttons</a></li>
+        <li><a href="#">component1</a></li>
+        <li><a href="#">component2</a></li>
       </ul>
 
     </div>
