--- a/app/views/home.html
+++ b/app/views/home.html
@@ -19,7 +19,7 @@
       <h2 class="govuk-heading-m erc-text-blue">From here you can:</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="components/menu-components.html">see the various components</a></li>
-        <li><a href="forms/housing1.html">see the housing form</a></li>
+        <li><a href="forms/housing/start.html">see the housing form</a></li>
       </ul>
 
     </div>
