--- a/app/views/forms/housing/start.html
+++ b/app/views/forms/housing/start.html
@@ -8,7 +8,7 @@
 {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
-    <!--div class="govuk-grid-column-two-thirds"-->
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-xl erc-text-blue">
         Members of Household
       </h1>
@@ -50,7 +50,7 @@
       <p>
 
       </p>
-    <!--/div-->
+    </div>
 </div>
 
 {% endblock %}
