improve the footer look

--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -47,7 +47,7 @@ footer {
     }
     .ft-address {
         border-top: 1px solid #99baca;
-        padding: 20px 0 0 20px;
+        padding-top: 20px;
         margin-bottom: 20px;
     }
     .ft-right {
