correct contractions - add footer links and a11y, contact-us and privacy pages

--- a/app/views/forms/housing/about-you.html
+++ b/app/views/forms/housing/about-you.html
@@ -29,7 +29,7 @@
         name: "address",
         id: "address",
         label: {
-          text: "What is your address?"
+          text: "What's your address?"
         }
       }) }}
 
