--- a/app/views/forms/housing/confirmation.html
+++ b/app/views/forms/housing/confirmation.html
@@ -18,12 +18,12 @@
         html: "Your reference number<br><strong>HDJ2123F</strong>"
       }) }}
 
-      <p>We have sent you a confirmation email.</p>
+      <p>We've sent you a confirmation email.</p>
 
       <h3 class="govuk-heading-m erc-text-blue">What happens next</h3>
 
       <p>
-        There is nothing more for you to do.
+        There's nothing more for you to do.
       </p>
 
       <p>
