--- a/app/views/forms/housing/start.html
+++ b/app/views/forms/housing/start.html
@@ -15,7 +15,7 @@
       <p>
           We need to know about you and each member of your household.  
       </p>
-      <p>We will use this information to:
+      <p>We'll use this information to:
           <ul class="govuk-list govuk-list--bullet erc-text-blue">
             <li>verify your identity where required</li>
             <li>contact you by post, email or telephone</li>
