--- a/app/views/forms/housing/summary.html
+++ b/app/views/forms/housing/summary.html
@@ -18,7 +18,7 @@
       
      
       <h2 class="govuk-heading-m erc-text-blue">Now send your response</h2>
-      <p>By submitting you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
+      <p>By submitting you are confirming that, to the best of your knowledge, the details you're providing are correct.</p>
       {{ govukButton({
         text: "Accept and submit your answers",
         href: "/forms/housing/confirmation.html",
