--- a/app/views/home.html
+++ b/app/views/home.html
@@ -13,13 +13,13 @@
         Homepage
       </h1>
       <p>
-        This is where I will create some prototype forms. 
+        We can create forms, patterns and have different versions to show and to use for usability testing. 
       </p>
 
       <h2 class="govuk-heading-m erc-text-blue">From here you can:</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="components/menu-components.html">see the various components</a></li>
-        <li><a href="forms/housing/start.html">see the housing form</a></li>
+        <li><a href="forms/housing/start.html">see the housing forms</a></li>
       </ul>
 
     </div>
