--- a/app/views/forms/housing/member2.html
+++ b/app/views/forms/housing/member2.html
@@ -29,13 +29,13 @@
         name: "previous-address-member2",
         id: "previous-address-member2",
         label: {
-          text: "What is their previous address? (if applicable)"
+          text: "What's their previous address? (if applicable)"
         }
       }) }}
 
       {{ govukInput({
         label: {
-          text: "What is their relationship to you?"
+          text: "What's their relationship to you?"
         },
         id: "relation-member2",
         name: "relation-member2",
@@ -49,7 +49,7 @@
         namePrefix: "dob-member2",
         fieldset: {
           legend: {
-            text: "What is their date of birth?"
+            text: "What's their date of birth?"
           }
         },
         hint: {
