--- a/app/views/contact-us.html
+++ b/app/views/contact-us.html
@@ -18,7 +18,7 @@
 
       <h2 class="govuk-heading-l erc-text-blue">Online</h2>
       <p>You can access our services 24/7 by visiting the "Pay | Book | Apply | Report" section.</p> 
-      <p>You can also chat to our customer service officers via Live chat, Monday to Friday, 9am - 4.45pm if you have any queries about our services. </p>
+      <p>You can also chat to our customer service officers via Live chat, Monday to Friday, 9am - 4.45pm</p>
 
       <h2 class="govuk-heading-l erc-text-blue">Telephone</h2>
       <ul class="govuk-list govuk-list--bullet erc-text-blue"></ulclass>
