--- a/app/views/components/buttons.html
+++ b/app/views/components/buttons.html
@@ -19,7 +19,7 @@
         <ul class="govuk-list govuk-list--bullet erc-text-blue">
           <li>primary buttons (green)</li>
           <li>secondary buttons (grey)</li>
-          <li>warning buttons (red)</a></li>
+          <li>warning buttons (red)</li>
         </ul>
       </p>
 
