--- a/app/views/components/menu-components.html
+++ b/app/views/components/menu-components.html
@@ -18,7 +18,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="buttons.html">buttons</a></li>
-        <li><a href="#">component1</a></li>
+        <li><a href="message-boxes.html">message boxes</a></li>
         <li><a href="#">component2</a></li>
       </ul>
 
