add more components examples

--- a/app/views/components/buttons.html
+++ b/app/views/components/buttons.html
@@ -12,6 +12,7 @@
       <h1 class="govuk-heading-xl erc-text-blue">
         Buttons
       </h1>
+      <p><a href="https://design-system.service.gov.uk/components/button/" target="_blank" rel="noopener">Reference GDS</a></p>
       <p>
         There are 3 types:
       </p>
