--- a/app/views/components/menu-components.html
+++ b/app/views/components/menu-components.html
@@ -19,7 +19,16 @@
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="buttons.html">buttons</a></li>
         <li><a href="message-boxes.html">message boxes</a></li>
-        <li><a href="#">component2</a></li>
+        <li><a href="radios.html">Radio buttons</a></li>
+        <li><a href="checkboxes.html">Checkboxes</a></li>
+        <li><a href="detail.html">Show/hide - Details</a></li>
+        <li><a href="panels.html">Panels - messages</a></li>
+        <li><a href="upload.html">Upload</a></li>
+        <li><a href="inputs.html">Inputs</a></li>
+        <li><a href="errors.html">Errors</a></li>
+
+        
+       
       </ul>
 
     </div>
