--- a/app/views/forms/housing/member1.html
+++ b/app/views/forms/housing/member1.html
@@ -67,7 +67,7 @@
       <br>
 
       {{ govukButton({
-        text: "Next",
+        text: "Continue",
         href: "/forms/housing/summary.html",
         classes: "button-primary"
       }) }}
