--- a/app/views/components/detail.html
+++ b/app/views/components/detail.html
@@ -12,8 +12,8 @@
       <h1 class="govuk-heading-xl erc-text-blue">
         Details
       </h1>
-      <p><a href="https://design-system.service.gov.uk/components/details/" target="_blank" rel="noopener">Reference GDS</a></p>
-
+      <p><strong class="govuk-tag black">GDS reference</strong><a href="https://design-system.service.gov.uk/components/details/" target="_blank" rel="noopener">Link to Details</a></p>
+      <hr class="govuk-section-break govuk-section-break--l">
       {% from "details/macro.njk" import govukDetails %}
 
 {{ govukDetails({
