--- a/app/views/components/message-boxes.html
+++ b/app/views/components/message-boxes.html
@@ -25,17 +25,33 @@
       </p>
 
       <div>
-          <p class="ercInformation">I am a message box I am a message box I am a message box I am a message box I am a message box</p>
-
-          <p class="ercSuccess">I am a message box I am a message box I am a message box I am a message box I am a message box</p>
-
-          <p class="ercWarning">I am a message box I am a message box I am a message box I am a message box I am a message box</p>
- 
-          <p class="ercError">I am a message box I am a message box I am a message box I am a message box I am a message box</p>
-  
+          <p class="ercInformation">I'm an information message box</p>
+          <p class="ercSuccess">I'm a success message box</p>
+          <p class="ercWarning">I'm a warning message box</p>
+          <p class="ercError">I'm an error message box</p>
       </div>
 
+      <p class="govuk-!-margin-top-9">An alternative closer to the <a href="https://v4-alpha.getbootstrap.com/components/alerts/" target="_blank" rel="noopener">Bootstraps alerts</a>:</p>
+      <ul class="govuk-list govuk-list--bullet erc-text-blue">
+          <li>Blue: text #31708f, border #bcdff1, background #d9edf7</li>
+          <li>Green: text #3c763d, border #d0e9c6, background #dff0d8</li>
+          <li>Red: text #a94442 , border #ebcccc, background #f2dede</li>
+          <li>Yellow: text #8a6d3b, border #faf2cc, background #fcf8e3</li>
+      </ul>
+      <div>
+          <p class="ercInformation bootstrap">I'm an information message box</p>
+          <p class="ercSuccess bootstrap">I'm a success message box</p>
+          <p class="ercWarning bootstrap">I'm a warning message box</p>
+          <p class="ercError bootstrap">I'm an error message box</p>
+      </div>
 
+      <p class="govuk-!-margin-top-9">or the same ones but with no borders:</p>
+      <div>
+          <p class="ercInformation no-border">I'm an information message box</p>
+          <p class="ercSuccess no-border">I'm a success message box</p>
+          <p class="ercWarning no-border">I'm a warning message box</p>
+          <p class="ercError no-border">I'm an error message box</p>
+      </div>
     </div>
 </div>
 
