--- a/app/views/components/upload.html
+++ b/app/views/components/upload.html
@@ -12,7 +12,8 @@
       <h1 class="govuk-heading-xl erc-text-blue">
         Upload
       </h1>
-      <p><a href="https://design-system.service.gov.uk/components/file-upload/" target="_blank" rel="noopener">Reference GDS</a></p>
+      <p><strong class="govuk-tag black">GDS reference</strong><a href="https://design-system.service.gov.uk/components/file-upload/" target="_blank" rel="noopener">link for upload</a></p>
+      <p>Note that this compotent will look different depending on the browser and device.</p>
       {% from "file-upload/macro.njk" import govukFileUpload %}
 
       {{ govukFileUpload({
