--- a/app/views/home.html
+++ b/app/views/home.html
@@ -16,10 +16,13 @@
         We can create forms, patterns and have different versions to show and to use for usability testing. 
       </p>
 
-      <h2 class="govuk-heading-m erc-text-blue">From here you can:</h2>
+      <h2 class="govuk-heading-m erc-text-blue">From here you can access</h2>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="components/menu-components.html">see the various components</a></li>
-        <li><a href="forms/housing/start.html">see the housing forms</a></li>
+        <li><a href="components/menu-components.html">a list components</a></li>
+        <li><a href="patterns/menu-patterns.html">a list patterns</a></li>
+        <li><a href="forms/menu-forms.html">a list of forms</a></li>
+        <li><a href="colours.html">a list of forms</a></li>
+        <li><a href="useful-links.html">useful links</a></li>
       </ul>
 
     </div>
