--- a/app/views/components/checkboxes.html
+++ b/app/views/components/checkboxes.html
@@ -12,8 +12,8 @@
       <h1 class="govuk-heading-xl erc-text-blue">
         Checkboxes
       </h1>
-      <p><a href="https://design-system.service.gov.uk/components/checkboxes/" target="_blank" rel="noopener">Reference GDS</a></p>
-      
+      <p><strong class="govuk-tag black">GDS reference</strong><a href="https://design-system.service.gov.uk/components/checkboxes/" target="_blank" rel="noopener">link for checkboxes</a></p>
+      <hr class="govuk-section-break govuk-section-break--l">
       {% from "checkboxes/macro.njk" import govukCheckboxes %}
 
       {{ govukCheckboxes({
@@ -45,7 +45,7 @@
         ]
       }) }}
     
-      {% from "checkboxes/macro.njk" import govukCheckboxes %}
+      <hr class="govuk-section-break govuk-section-break--xl">
 {% from "input/macro.njk" import govukInput %}
 
 {% set emailHtml %}
@@ -122,7 +122,7 @@
   ]
 }) }}
 
-{% from "checkboxes/macro.njk" import govukCheckboxes %}
+<hr class="govuk-section-break govuk-section-break--xl">
 
 {{ govukCheckboxes({
   idPrefix: "nationality",
