--- a/app/views/components/menu-components.html
+++ b/app/views/components/menu-components.html
@@ -17,15 +17,17 @@
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
+          <li><a href="radios.html">Radio buttons</a></li>
+          <li><a href="checkboxes.html">Checkboxes</a></li>
         <li><a href="buttons.html">buttons</a></li>
-        <li><a href="message-boxes.html">message boxes</a></li>
-        <li><a href="radios.html">Radio buttons</a></li>
-        <li><a href="checkboxes.html">Checkboxes</a></li>
-        <li><a href="detail.html">Show/hide - Details</a></li>
         <li><a href="panels.html">Panels - messages</a></li>
         <li><a href="upload.html">Upload</a></li>
         <li><a href="inputs.html">Inputs</a></li>
         <li><a href="errors.html">Errors</a></li>
+        <li><a href="message-boxes.html">message boxes</a></li>
+        <li><a href="detail.html">Show/hide - Details</a></li>
+        <li><a href="#">Breadcrumbs</a><strong class="govuk-tag red">coming soon</strong></li>
+
 
         
        
