add new pages - supporting documents

--- a/app/views/accessibility.html
+++ b/app/views/accessibility.html
@@ -13,7 +13,7 @@
         Accessibility menu
       </h1>
       <p>
-        to be created - change font, colours, and size
+        to be created - change font, open dyslexic, colours, and size
       </p>
 
 
