--- a/app/views/components/buttons.html
+++ b/app/views/components/buttons.html
@@ -51,6 +51,14 @@
           }) }}
       </p>
 
+      <p>
+          {% from "button/macro.njk" import govukButton %}
+
+          {{ govukButton({
+            text: "Save and come back later",
+            classes: "button-secondary"
+          }) }}
+      </p>
     </div>
 </div>
 
