--- a/app/views/home.html
+++ b/app/views/home.html
@@ -13,16 +13,17 @@
         Homepage
       </h1>
       <p>
-        We can create forms, patterns and have different versions to show and to use for usability testing. 
+        We can create forms, patterns and show our work. <br>By clicking on the ERC logo, you will get back to this homepage.
       </p>
 
-      <h2 class="govuk-heading-m erc-text-blue">From here you can access</h2>
+      <h2 class="govuk-heading-m erc-text-blue">From here you can access:</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="components/menu-components.html">a list components</a></li>
         <li><a href="patterns/menu-patterns.html">a list patterns</a></li>
         <li><a href="forms/menu-forms.html">a list of forms</a></li>
-        <li><a href="colours.html">a list of forms</a></li>
+        <li><a href="colours.html">colours</a></li>
         <li><a href="useful-links.html">useful links</a></li>
+        <li><a href="support.html">supporting documents</a></li>
       </ul>
 
     </div>
