--- a/app/views/colours.html
+++ b/app/views/colours.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-
+<a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl erc-text-blue">
