--- a/app/views/home.html
+++ b/app/views/home.html
@@ -13,7 +13,7 @@
         Homepage
       </h1>
       <p>
-        We can create forms, patterns and show our work. <br>By clicking on the ERC logo, you will get back to this homepage.
+        We can create forms, patterns and show our work. <br>By clicking on the ERC logo on any page, you will get back to this homepage.
       </p>
 
       <h2 class="govuk-heading-m erc-text-blue">From here you can access:</h2>
