--- a/app/views/useful-links.html
+++ b/app/views/useful-links.html
@@ -52,7 +52,7 @@
 
 
       <h2 class="govuk-heading-m erc-text-blue">Videos</h2>
-      <p><iframe width="560" height="315" src="https://www.youtube.com/embed/dEbl5jvLKGQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+      <p><iframe id="frame" width="560" height="315" src="https://www.youtube.com/embed/dEbl5jvLKGQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
       <p><iframe width="560" height="315" src="https://www.youtube.com/embed/QJlCBji5NpA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
       <p><iframe width="560" height="315" src="https://www.youtube.com/embed/hs8sykCaf3E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
 
