--- a/app/views/support.html
+++ b/app/views/support.html
@@ -21,7 +21,7 @@
         <a href="/../../public/images/posters-pdf/Poster_BetterDataBetterDecisions.pdf"><img src="/../../public/images/posters-pdf/Poster_BetterDataBetterDecisions.png" alt="Better Data better decisions poster" style="height:150px; margin-right:10px"></a>
         <a href="/../../public/images/posters-pdf/Poster_NoDataNoTruth.pdf"><img src="/../../public/images/posters-pdf/Poster_NoDataNoTruth.png" alt="No data no truthposter" style="height:150px; margin-right:10px"></a>
         <a href="/../../public/images/posters-pdf/Poster_UserResearch_IsATeamSport.pdf"><img src="/../../public/images/posters-pdf/Poster_UserResearch_IsATeamSport.png" alt="User Research is a team sport poster" style="height:150px ;margin-right:10px"></a>
-        <a href="/../../public/images/posters-pdf/Poster_YouAreNotYourUser.pdf"><img src="/../../public/images/posters-pdf/Poster_YouAreNotYourUser.png" alt="You are not your user poster" style="height:150px ;margin-right:10px""></a>
+        <a href="/../../public/images/posters-pdf/Poster_YouAreNotYourUser.pdf"><img src="/../../public/images/posters-pdf/Poster_YouAreNotYourUser.png" alt="You are not your user poster" style="height:150px ;margin-right:10px"></a>
         <a href="/../../public/images/posters-pdf/visability93.png"><img src="/../../public/images/posters-pdf/visability93.png" alt="93% of people with usability don't use a wheelchair" style="height:150px"></a>
       </p>
       <p><a href="/../../public/images/posters-pdf/DCE_chart.jpg"><img src="/../../public/images/posters-pdf/DCE_chart.jpg" alt="Digital Customer Experience chart diagram"></a></p>
