--- a/app/views/colours.html
+++ b/app/views/colours.html
@@ -382,7 +382,7 @@
         <tr class="app-colour-list-row">
           <th class="app-colour-list-column app-colour-list-column--name" scope="row">
             <span class="app-swatch " style="background-color:#bde5f8"></span>
-            <code>Blue - information background</code>
+            <code>Blue - info background</code>
           </th>
           <td class="app-colour-list-column app-colour-list-column--colour">
             #bde5f8
