change the colours display

--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -26,6 +26,7 @@ $govuk-global-styles: true;
 
 $erc-text-blue : #004269; 
 $erc-logo-blue: #0071BA;
+$erc-green-border: #008000;
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
